# cmake_stm32f10x

./: CMakeLists.txt  jlink-swd-stm32f10x.cfg
